--- a/Iris.ipynb
+++ b/Iris.ipynb
@@ -6,7 +6,8 @@
       "name": "Iris.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMhq4HyJ0SdE2aOXBpQoKQc",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNorxu7EH4bzOlBH2engOQd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,64 +24,6 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Mirnada/iris/blob/main/Iris.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mT8B43NNv4_z"
-      },
-      "source": [
-        "#Settings"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hVi_xTHRv7kX",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b31b59c1-ed57-44ff-e92b-53a471e4e258"
-      },
-      "source": [
-        "# mount google drive\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
-      ],
-      "execution_count": 93,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PWqHLiiOwAMg",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "695ff5a9-8b7f-4abb-dcff-0efe7ab22442"
-      },
-      "source": [
-        "# change working directory\n",
-        "%cd /content/gdrive/My Drive/UEA-IA/iris/"
-      ],
-      "execution_count": 94,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/gdrive/My Drive/UEA-IA/iris\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
@@ -464,7 +407,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 867
+          "height": 811
         },
         "id": "INhhRN4kys2v",
         "outputId": "a52b7bad-70ae-4ff1-e34b-c1c55455ee24"
@@ -760,64 +703,6 @@
         "*   A previsão das entradas que pertencem a classe *setosa*, obteve 100% de precisão e recall, ratificando o que foi dito anteriormente, que essa classe é simples de se prever;\n",
         "*   O modelo foi submetido a duas entradas que não pertenciam ao dataset original, essas entradas possuiam valores gerados empiricamente, obtendo resultados satisfatórios;\n",
         "*   Foi construido um novo modelo com duas características, consideradas as mais importantes, encontradas pelo modelo anterior. A acuracia desse novo modelo continuou sendo satisfatória, considerando o uso do algoritmo de *Decision Tree*."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9-AqegoEx-OM",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "323c9736-4c3a-497d-efad-ef0a657fa3ce"
-      },
-      "source": [
-        "# commit\n",
-        "!git config --global user.email \"mmmt.eng@uea.edu.br\"\n",
-        "!git config --global user.name \"Matheus Matos\"\n",
-        "!git commit -am 'Avaliação do modelo com feature_importance'"
-      ],
-      "execution_count": 113,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[main c97bb42] Avaliação do modelo com feature_importance\n",
-            " 1 file changed, 1 insertion(+), 1 deletion(-)\n",
-            " rewrite Iris.ipynb (89%)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8_u75q2KOB-i",
-        "outputId": "7dfb14fc-fab5-4c3a-e846-1a200e1b7028"
-      },
-      "source": [
-        "!git push"
-      ],
-      "execution_count": 114,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Counting objects: 19, done.\n",
-            "Delta compression using up to 2 threads.\n",
-            "Compressing objects: 100% (18/18), done.\n",
-            "Writing objects: 100% (19/19), 322.99 KiB | 4.55 MiB/s, done.\n",
-            "Total 19 (delta 8), reused 0 (delta 0)\n",
-            "remote: Resolving deltas: 100% (8/8), done.\u001b[K\n",
-            "To https://github.com/Mirnada/iris\n",
-            "   52a3341..c97bb42  main -> main\n"
-          ],
-          "name": "stdout"
-        }
       ]
     }
   ]
