--- a/Iris.ipynb
+++ b/Iris.ipynb
@@ -6,8 +6,7 @@
       "name": "Iris.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNorxu7EH4bzOlBH2engOQd",
+      "authorship_tag": "ABX9TyPZy9z8Ngx/ANKWTditJGgF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -699,7 +698,7 @@
       },
       "source": [
         "*   Em um primeiro momento, verificou-se a profundidade do modelo de *Decision Tree* para que nao ocorresse overfiting, encontrando um valor maximo e mínimo, 3 e 2 respectivamente;\n",
-        "*   A matrix de confusão mostra o ótimo desempenho que o modelo teve com uma profundidade igual a 2, obtendo apenas 1 erro de previsão;\n",
+        "*   A matrix de confusão mostra o ótimo desempenho que o modelo teve com uma profundidade igual a 2, obtendo a acuracia de 98% com apenas um erro na previsão das entradas;\n",
         "*   A previsão das entradas que pertencem a classe *setosa*, obteve 100% de precisão e recall, ratificando o que foi dito anteriormente, que essa classe é simples de se prever;\n",
         "*   O modelo foi submetido a duas entradas que não pertenciam ao dataset original, essas entradas possuiam valores gerados empiricamente, obtendo resultados satisfatórios;\n",
         "*   Foi construido um novo modelo com duas características, consideradas as mais importantes, encontradas pelo modelo anterior. A acuracia desse novo modelo continuou sendo satisfatória, considerando o uso do algoritmo de *Decision Tree*."
